# bl808-pac

./: .gitignore  Cargo.toml  LICENSE  README.md  bl808.svd  build.rs  generate.ps1  generate.sh  rustfmt.toml
src/: debug.rs  emac.rs  generic.rs  glb.rs  hbn.rs  i2c.rs  i2s.rs  ir.rs  lib.rs  lz4d.rs  mmglb.rs  pds.rs  pta.rs  pwm.rs  sdh.rs  spi.rs  uart.rs  usb.rs  wifi.rs
src/cci/: todo.rs
src/debug/: control.rs  identify.rs  password.rs
src/emac/: backed_gap.rs  collision.rs  control_read.rs  control_write.rs  flow_control.rs  frame_length.rs  hash.rs  interrupt_mask.rs  interrupt_source.rs  mac_address.rs  mii_address.rs  mii_command.rs  mii_mode.rs  mii_state.rs  mode.rs  non_backed_gap_1.rs  non_backed_gap_2.rs  transmit_buffer.rs  transmit_control.rs
src/generic/: atomic.rs
src/glb/: adc_config.rs  audio_config_0.rs  audio_config_1.rs  bus_config_0.rs  cam_config.rs  chip_inform.rs  core_config_16.rs  core_config_17.rs  core_config_18.rs  core_config_19.rs  core_config_20.rs  core_config_21.rs  core_config_22.rs  core_config_23.rs  core_config_24.rs  core_config_25.rs  dac_config_0.rs  dac_config_1.rs  dac_config_2.rs  dac_config_3.rs  debug_config_0.rs  debug_config_1.rs  debug_config_2.rs  debug_config_3.rs  debug_config_4.rs  digit_clock_0.rs  digit_clock_1.rs  digit_clock_2.rs  dma_config_0.rs  dma_config_1.rs  dma_config_2.rs  emac_config.rs  emi_config.rs  flash_config.rs  gpio_clear.rs  gpio_config.rs  gpio_input.rs  gpio_output.rs  gpio_set.rs  i2c_config.rs  (+15 more)
src/gpip/: todo.rs
src/hbn/: control.rs  global.rs  interrupt_clear.rs  interrupt_mode.rs  interrupt_state.rs  rc32k.rs  rtc_control_0.rs  rtc_control_1.rs  rtc_time_hi.rs  rtc_time_lo.rs  sram.rs  time_hi.rs  time_lo.rs  xtal32k.rs
src/i2c/: bus_busy.rs  config.rs  data_read.rs  data_write.rs  fifo_config_0.rs  fifo_config_1.rs  interrupt.rs  period_data.rs  period_start.rs  period_stop.rs  sub_address.rs
src/i2s/: base_clock.rs  fifo_config_0.rs  fifo_config_1.rs  interrupt_state.rs
src/ir/: receive_bit_count.rs  receive_config.rs  receive_data.rs  receive_interrupt.rs  receive_width.rs  transmit_config.rs  transmit_data.rs  transmit_interrupt.rs  transmit_width.rs
src/lz4d/: config.rs  destination_end.rs  destination_start.rs  interrupt_enable.rs  interrupt_state.rs  source_end.rs  source_start.rs
(+75 files in other folders)
