[package]
name = "bl808-pac"
description = "Embedded Rust's Peripheral Access Crate for BL808 RISC-V microcontroller"
authors = ["Bouffalo Lab <support@bouffalolab.com>", "Sipeed Co.,Ltd. <support@sipeed.com>", "luojia65 <me@luojia.cc>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/bouffalolab/bl808-pac"
documentation = "https://docs.rs/bl808-pac"
license = "MulanPSL-2.0"
readme = "README.md"
keywords = ["riscv", "bl808", "pac"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcell = "0.1.3"
derive_more = "0.99.17"

[build-dependencies]
regex = "1.7.1"
svd2rust = "0.28.0"
