[package]
name = "bl808-pac"
description = "Embedded Rust's Peripheral Access Crate for BL808 RISC-V microcontroller"
authors = ["Bouffalo Lab <support@bouffalolab.com>", "Sipeed Co.,Ltd. <support@sipeed.com>", "luojia65 <me@luojia.cc>"]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/bouffalolab/bl808-pac"
documentation = "https://docs.rs/bl808-pac"
license = "MulanPSL-2.0"
readme = "README.md"
keywords = ["riscv", "bl808", "pac"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.0", optional = true }
riscv-rt = { version = "0.11.0", optional = true }
riscv = "0.10.1"
vcell = "0.1.3"
portable-atomic = "1.0"

[features]
rt = ["riscv-rt"]
